--- a/src/app/+components/login/login.component.scss
+++ b/src/app/+components/login/login.component.scss
@@ -1,4 +1,13 @@
+.back {
+  transition: all 0.5s;
+}
+
+.back:hover {
+  transform: scale(1.06);
+}
+
 .dark {
+  transition: all 1s;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,6 +16,7 @@
 }
 
 .light {
+  transition: all 1s;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,19 +31,22 @@
 .login {
   background-color: #121b18;
   border-radius: 0.4em;
-  width: 25em;
-  filter: drop-shadow(0 0 10em #2ae3a5);
+  width: 23em;
+  display: flex;
+  justify-content: center;
+  filter: drop-shadow(0 0 10em #86ffd7);
 
   label {
     color: white;
     font-size: 1.4em;
-    margin: 0.5em;
+    margin: 0.2em;
   }
 
   input {
     transition: all 0.5s;
-    padding: 0.2em 0.5em 0.2em 9.5em;
+    padding: 0.3em;
     margin: 0.5em;
+    width: 22em;
     border-radius: 0.3em;
     border: none;
     filter: drop-shadow(0 0 40px rgb(124, 124, 124));
@@ -41,6 +54,20 @@
 
   form {
     margin: 1em;
+
+    >a {
+      font-size: 0.85em;
+      margin: 0.5em;
+      color: rgb(203, 255, 198);
+      cursor: pointer;
+      text-decoration: underline;
+      transition: all 0.3s;
+    }
+
+    >a:hover {
+      text-decoration: none;
+      color: rgb(201, 201, 201);
+    }
   }
 
   button {
@@ -72,7 +99,10 @@
   }
 
   .error {
-    background-color: rgba(255, 88, 88, 0.227);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 70, 70, 0.432);
     text-align: center;
     margin: auto;
     padding: 0.3em 0 0.3em 0;
@@ -84,7 +114,10 @@
   }
 
   .successLogin {
-    background-color: rgba(91, 255, 88, 0.227);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(91, 255, 88, 0.514);
     text-align: center;
     margin: auto;
     padding: 0.3em 0 0.3em 0;
@@ -102,6 +135,8 @@
   }
 
   button:disabled {
+    transform: scale(1);
+    cursor: no-drop;
     background-color: #454545;
   }
 
@@ -115,11 +150,39 @@
 }
 
 .darkMode {
-  position: fixed;
+  position: absolute;
   top: 1em;
   left: 1em;
 
   a {
     filter: drop-shadow(0 0 0.8em white);
+  }
+}
+
+.darkBack {
+  position: absolute;
+  top: 1.2em;
+  right: 0.8em;
+  background-color: rgb(255, 255, 255);
+  border-radius: 0.5em;
+  padding: 0.35em 1.8em;
+
+  a {
+    text-decoration: none;
+    color: rgb(45, 45, 45);
+  }
+}
+
+.lightBack {
+  position: absolute;
+  top: 1.2em;
+  right: 0.8em;
+  border-radius: 0.5em;
+  padding: 0.35em 1.8em;
+  background-color: rgb(45, 45, 45);
+
+  a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
   }
 }
